Fixed background bug on mobile Safari

--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -2,9 +2,15 @@ root {
     display: block;
 }
 
-body {
+#background_wrap {
+    z-index: -10;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    //: 100%;
     background-image: url('background.png');
-    position: static;
     background-attachment: fixed;
 }
 
